objects/Quote_History__c.object
<CustomObject>
    <description>Historical Quotation History. Refer to local QuoteStudioTwo.net application or the Quote Approval Centre for details.</description>
    <label>Quotation</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001XbfcEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotation History</relationshipLabel>
        <relationshipName>R00N30000001XbYeEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotation History</relationshipLabel>
        <relationshipName>R00N30000001XbfaEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Quote_number__c</fullName>
        <label>SAP Quote number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Expiry_Date__c</fullName>
        <label>Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Created_Date__c</fullName>
        <label>Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grouping_for_Field_Title__c</fullName>
        <formula>IF(ISBLANK(Name) , &quot;Without Title&quot;, &quot;With Title&quot;)</formula>
        <label>Grouping for Field Title</label>
        <type>Text</type>
    </fields>
</CustomObject>